--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ricardofuzeto/ws-core",
   "description": "Web service core library",
-  "version": "0.0.1-3",
+  "version": "0.0.1-4",
   "author": "Ricardo Fuzeto",
   "contributors": [
     "Ricardo Fuzeto <ricardofuzeto@gmail.com>"
@@ -10,7 +10,8 @@
   "keywords": [
     "web",
     "service",
-    "express"
+    "context",
+    "log"
   ],
   "main": "index.js",
   "dependencies": {
